# myairflow

./: README.md  pyproject.toml
dags/: bqdags  catchup.py  hello.py  mission.py  movie.py  movie_after.py  movie_spark.py  myetl.py  seoul.py  test96.py  virtual.py  wiki_save.py
pyspark/: movie_meta.py
src/myairflow/: send_notification.py
tests/: test_notify.py
